<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">HOME</string>
    <string name="in_city">In city</string>
    <string name="out_city">OUT CITY</string>
    <string name="other">OTHER</string>
    <string name="age">Age:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="_22">22</string>
    <string name="lahore">Lahore</string>
    <string name="pakistan">Pakistan</string>
    <string name="facebook_login">FaceBook Login</string>
    <string name="google_login">Google+ Login</string>
    <string name="register">Register</string>
    <string name="fgt_pwd">Change your password here</string>
    <string name="edit_pwd">Enter new password here</string>
</resources>
