<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="308dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />



        <Button
            android:id="@+id/fb"
            style="@style/facebookbutton_style"
            android:onClick="onFacebookClick"
            android:text="@string/facebook_login"
            android:textColor="#ffffff"
            android:textStyle="bold"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/google"
            style="@style/googlebutton_style"
            android:onClick="onGoogleClick"
            android:text="@string/google_login"
            android:textColor="#ffffff"
            android:textStyle="bold"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/register"
            style="@style/button_style2"
            android:onClick="onRegisterClick"

            android:text="@string/register"
            android:textStyle="bold"
            tools:ignore="OnClick"/>

    </LinearLayout>
</RelativeLayout>